# Phase-2-Hackathon-II

./: .gitignore  CLAUDE.md  README.md
.claude/Skills/: frontend-skills.md
.claude/agents/: backend-architect.md  nextjs-frontend-agent.md
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_main.py  test_signup.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  account.py  base.py  session.py  task.py  user.py  verification.py
backend/app/routers/: __init__.py  auth.py  tasks.py  users.py
backend/app/schemas/: __init__.py  common.py  session.py  task.py  user.py
backend/app/services/: __init__.py  account.py  auth.py  session.py  user.py
backend/app/utils/: __init__.py  dependencies.py  exceptions.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  auth.py  tasks.py
backend/src/auth/: __init__.py  dependencies.py  jwt_handler.py
backend/src/config/: __init__.py  settings.py
backend/src/database/: __init__.py  session.py
backend/src/models/: __init__.py  task.py  user.py
backend/src/schemas/: __init__.py  task.py  user.py
backend/src/services/: __init__.py  task_service.py  user_service.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_services.py  test_sessions.py  test_tasks.py  test_users.py
frontend/: .env.example  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: use-auth.ts  use-tasks.ts
frontend/types/: task.ts  user.ts
history/adr/: 001-backend-api-decisions.md
history/prompts/: 001-backend-implementation.md
specs/001-backend-hardening/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-frontend-modernization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-backend-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-frontend-backend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-fastapi-better-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+84 files in other folders)
